# ASC-ODE_physics_group

./: .gitmodules  CMakeLists.txt
demos/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ASC_ode.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MassSpring_Newmark.txt  ODE_plot.ipynb  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test_RC.cc  test_alpha.cc  test_alpha.vcxproj  test_alpha.vcxproj.filters  test_newmark.cc  test_newmark.vcxproj  test_newmark.vcxproj.filters  test_ode.cc  test_ode.vcxproj  test_ode.vcxproj.filters
demos/mass_spring/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  mass_spring.vcxproj  mass_spring.vcxproj.filters  test_mass_spring.vcxproj  test_mass_spring.vcxproj.filters
demos/mass_spring/mass_spring.dir/Release/mass_spring.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  mass_spring.lastbuildstate
demos/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
demos/test_alpha.dir/Release/test_alpha.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
demos/test_newmark.dir/Release/test_newmark.tlog/: CustomBuild.command.1.tlog
demos/test_ode.dir/Release/test_ode.tlog/: test_ode.lastbuildstate
demos/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
demos/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
mass_spring/: CMakeLists.txt  mass_spring.cc  mass_spring.h
src/: Newton.h  nonlinfunc.h  ode.h
